# plasma-applets-system-panel

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Messages.sh  README.md  TODO
src/: CMakeLists.txt
src/package/: metadata.desktop  metadata.json
src/package/contents/code/: data.js
src/package/contents/config/: config.qml  main.xml
src/package/contents/ui/: ConfigGeneral.qml  ConfigIconSettings.qml  ConfigLayout.qml  SystemPanel.qml  configGeneral.qml  configIconSettings.qml  main.qml
src/plugin/: CMakeLists.txt  plasmoidplugin.cpp  plasmoidplugin.h  qmldir  systempanel.cpp  systempanel.h
src/translations/: CMakeLists.txt  TRANSLATORS.REAME  TRANSLATORS.REAME.md  es.po  extract-and-merge-messages.sh  fr.po  nl.po  systempanel.pot
